--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NyM Travel Agency</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
@@ -36,47 +36,51 @@
         <div  class="passport">
             <img class="img" src="images/passport.png" alt="passport">
             <h2>Passport</h2>
-            <p>Through the information received by you, we will be able to contact you to find out what are the things that are in your possession, either to begin with, the passport, which is one of the most important elements of our work, we will see its validation time and If its expiration is close, we will give you some (advice) to be able to process them.
-            We give it the necessary emphasis since it is the only document that will help us to know more about your data and avoid any inconvenience in the whole process that you will win with us.</p>
+            <p>Through the information received by you, we will be able to contact you to find out what are the things that are in your possession, either to begin with, the passport, which is one of the most important elements of our work, we will see its validation time and If its expiration is close, we will give you some (advice) to be able to process them...<a href="#">more</a>
+            <!--We give it the necessary emphasis since it is the only document that will help us to know more about your data and avoid any inconvenience in the whole process that you will win with us.--></p>
         </div>
         <div  class="tickets">
             <img class="img" src="images/tickets.png" alt="tickets">
             <h2>Tickets</h2>
-            <p>Tickets are an essential art in our work and looking for the best for you we need to work with all the series that you deserve, knowing all the possible information about your personal data, as well as your time availability in order to provide you with the best service, since either with the tickets, the lodging and the areas that you want to know.
-                We have more than 10 years of experience and we would like to serve you with the quality we have.</p>  
+            <p>Tickets are an essential art in our work and looking for the best for you we need to work with all the series that you deserve, knowing all the possible information about your personal data, as well as your time availability in order to provide you with the best service, since either with the tickets, the lodging and the areas that you want to know...<a href="#">more</a>.
+                <!--!We have more than 10 years of experience and we would like to serve you with the quality we have.</p> --> 
         </div>
         <div class="cusco">
             <img class="img" src="images/cusco.jpeg" alt="cusco">
             <h2>Cusco</h2>
             <p>Cusco is one of the 7 new wonders of the world and will not be so for a long time and its infrastructure is totally impressive. Trust us to serve you and you will see that Machu Picchu will be an experience you will never forget.
-            From the arrival at the Cusco Airport you will see that this area is full of beauty and with the best tranquility you will be able to see the city, with a lot of colonial influence and how many more attractions both in the city and its surroundings.</p>
+            From the arrival at the Cusco Airport you will see that this area is full of beauty and with the best tranquility you will be able...<a href="#">more</a> <!-- to see the city, with a lot of colonial influence and how many more attractions both in the city and its surroundings.--></p>
         </div>
         <div class="kuelap">
             <img class="img" src="images/kuelap.png" alt="kuelap">
             <h2>Kuelap</h2>
             <p>Kuélap, or Cuélap, is an important pre-Inca archaeological site located in the northeastern Andes of Peru, in the Province of Luya. It was built by the Chachapoyas culture.
 
-            It forms a large stone architectural complex characterized by its monumental condition, with a large artificial platform, oriented from south to north, set on the calcareous rock ridge at the top of Cerro Barreta (at 3000 m.a.s.l.). The platform extends for almost 600 meters and is surrounded by a wall that is 19 meters high at some points.</p>
+            It forms a large stone architectural complex characterized by its monumental condition, with a large artificial platform, oriented from south to north, set on the calcareous rock... <a href="#">more</a>  <!--ridge at the top of Cerro Barreta (at 3000 m.a.s.l.). The platform extends for almost 600 meters and is surrounded by a wall that is 19 meters high at some points. --></p>
         </div>
         <div class="Internationals1">
             <img class="img" src="images/Egypt.png" alt="Egypt">
-            <p>Ancient Egypt or Ancient Egypt was a civilization of Antiquity, which originated along the middle and lower reaches of the Nile River, whose history spans more than three millennia. It is considered one of the most important of humanity.1 The original name of the country, especially during the Old Kingdom, was Kemet (Km.t), 'black land', due to the color of the fertilizing silt that covered it during the regular annual flooding the valley that lies on the banks of the Nile River, as opposed to Deshret (dsr.t, 'red earth'), by the sand of the Sahara desert, which covers most of the Egyptian territory.</p>
+            <h2>Egypt</h2>
+            <p>Ancient Egypt or Ancient Egypt was a civilization of Antiquity, which originated along the middle and lower reaches of the Nile River, whose history spans more than three millennia. It is considered one of the most important of humanity.1 The original name of the country, especially during the Old Kingdom, was Kemet (Km.t), 'black land'...<a href="#">more</a>  <!--, due to the color of the fertilizing silt that covered it during the regular annual flooding the valley that lies on the banks of the Nile River, as opposed to Deshret (dsr.t, 'red earth'), by the sand of the Sahara desert, which covers most of the Egyptian territory. --></p>
         </div>
         <div class="Internationals2">
             <img class="img" src="images/europa.png" alt="European">
+            <h2>Europa</h2>
             <p>Sightseeing in Europe is a fascinating experience where you can discover numerous tourist attractions, an indescribable historical and cultural legacy, and unique gastronomy in the world.
-            The European continent stretches geographically from Asia to the Atlantic Ocean, and from Africa to the Arctic Sea.
-            Lying on the northern side of the Mediterranean, Europe is bounded by the Atlantic Ocean on its western border and by both the Norwegian Sea and the Barents Sea on its northern axis.</p>  
+            The European continent stretches geographically from Asia to the Atlantic Ocean, and from Africa to the Arctic Sea...<a href="#">more</a>
+            <!-- Lying on the northern side of the Mediterranean, Europe is bounded by the Atlantic Ocean on its western border and by both the Norwegian Sea and the Barents Sea on its northern axis. --></p>  
         </div>
         <div class="Internationals3">
             <img  class="img" src="images/australia.png"  alt="Australia">
+            <h2>Australia</h2>
             <p>It is not a very exploited destination but it has many options to visit.
-            Australia also offers us a great variety of contrasts and a spectacular beauty that is not available in other parts of our planet. For example, along the coast we can explore vibrant cities rich in multi-culture, go on a safari to the vast sand islands, trek through its ancient rainforests or scuba dive the Great Barrier Reef. In the interior (or Outback as they call it in Australia) we can explore its national parks and red sand deserts if we want it to be an adventure trip.</p>
+            Australia also offers us a great variety of contrasts and a spectacular beauty that is not available in other parts of our planet. For example, along the coast we can explore vibrant cities rich in multi-culture, go on a safari to the vast sand islands, trek through its ancient rainforests or scuba dive...<a href="#">more</a> <!--the Great Barrier Reef. In the interior (or Outback as they call it in Australia) we can explore its national parks and red sand deserts if we want it to be an adventure trip.--></p>
         </div>
         <div class="Internationals4">
             <img class="img" src="images/Africa.png" alt="Africa">
+            <h2>Africa</h2>
             <p>It is not a very exploited destination but it has many options to visit.
-            Australia also offers us a great variety of contrasts and a spectacular beauty that is not available in other parts of our planet. For example, along the coast we can explore vibrant cities rich in multi-culture, go on a safari to the vast sand islands, trek through its ancient rainforests or scuba dive the Great Barrier Reef. In the interior (or Outback as they call it in Australia) we can explore its national parks and red sand deserts if we want it to be an adventure trip.</p>
+                Australia also offers us a great variety of contrasts and a spectacular beauty that is not available in other parts of our planet. For example, along the coast we can explore vibrant cities rich in multi-culture, go on a safari to the vast sand islands, trek through its ancient rainforests or scuba dive...<a href="#">more</a> <!--the Great Barrier Reef. In the interior (or Outback as they call it in Australia) we can explore its national parks and red sand deserts if we want it to be an adventure trip.--></p>
         </div>
 
     </main>    
