--- a/aboutme/personalsite/international.html
+++ b/aboutme/personalsite/international.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NyM Travel Agency</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
@@ -36,24 +36,44 @@
         <div  class="passport">
             <img class="img" src="images/trasport.png" alt="transport">
             <h3>Transport</h3>
-            <p>We know the tastes of our clients so that they are calm throughout their stay
-            </p>
+            <p>We know the tastes of our clients so that they are calm throughout their stay...
+            <a href="#">more</a></p>
         </div>
         <div  class="tickets">
             <img class="img" src="images/mews.png" alt="news">
             <h3>News</h3>
-            <p>Keep them in touch about tourism issues and more...</p>  
+            <p>Keep them in touch about tourism issues and more...<a href="#">more</a></p>  
         </div>
         <div class="cusco">
             <img class="img" src="images/hotel.png" alt="hotels">
             <h3>Hotels</h3>
-            <p>The best Hotels in the market where they are located</p>
+            <p>The best Hotels in the market where they are located...<a href="#">more</a></p>
         </div>
         <div class="kuelap">
             <img class="img" src="images/guide.png" alt="service">
             <h3>Personalized Guides</h3>
-            <p>Tourist guides for better information in their destinations</p>
+            <p>Tourist guides for better information in their destinations...<a href="#">more</a></p>
         </div>
+        <div  class="Internationals1">
+            <img class="img" src="images/europa.png" alt="europa">
+            <h3>Europa</h3>
+            <p>We know the tastes of our clients so that they are calm throughout their stay...<a href="#">more</a>
+            </p>
+        </div>
+        <div  class="Internationals2">
+            <img class="img" src="images/cusco.jpeg" alt="cusco">
+            <h3>America</h3>
+            <p>Keep them in touch about tourism issues and ...<a href="#">more</a></p>  
+        </div>
+        <div class="Internationals3">
+            <img class="img" src="images/australia.png" alt="australia">
+            <h3>Australia</h3>
+            <p>The best Hotels in the market where they are located...<a href="#">more</a></p>
+        </div>
+        <div class="Internationals4">
+            <img class="img" src="images/Africa.png" alt="africa">
+            <h3>Africa</h3>
+            <p>Tourist guides for better information in their destinations...<a href="#">more</a></p>
         </div>
 
     </main>    
