--- a/aboutme/personalsite/peru.html
+++ b/aboutme/personalsite/peru.html
@@ -128,7 +128,7 @@
 <footer>
     <p>NyM Travel &copy; 2022 - Martin Pasco</p>
     <p><a href="index.html" target="_blank">Home</a></p>
-    <p></p><a href="peru.html" class="nav-link">Get to Know Peru |</a>
+    <p></p><a href="peru.html" class="nav-link">Get to Know Peru </a>
     <p><a href="international.html" target="_blank">Internationals Destinations</a></p>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
