--- a/aboutme/personalsite/peru.html
+++ b/aboutme/personalsite/peru.html
@@ -99,7 +99,7 @@
         </div>
         <div  class="tickets">
             <img class="img" src="images/tickets.png" alt="tickets">
-            <h2>tickets</h2>
+            <h2>Tickets</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eligendi dolor molestiae eveniet debitis excepturi dolorum possimus accusamus placeat suscipit. Iure natus nihil at molestiae eum? Eveniet maxime in quis veritatis delectus perferendis aperiam voluptas, quisquam id distinctio ullam iste quae quasi eius harum asperiores, sed alias exercitationem nemo quas.</p>  
         </div>
         <div class="cusco">
