--- a/aboutme/personalsite/international.html
+++ b/aboutme/personalsite/international.html
@@ -42,12 +42,12 @@
         <div  class="tickets">
             <img class="img" src="images/mews.png" alt="news">
             <h3>News</h3>
-            <p>Keep them in touch about tourism issues and more...<a href="#">more</a></p>  
+            <p>Keep them in touch about tourism issues and...<a href="#">more</a></p>  
         </div>
         <div class="cusco">
             <img class="img" src="images/hotel.png" alt="hotels">
             <h3>Hotels</h3>
-            <p>The best Hotels in the market where they are located...<a href="#">more</a></p>
+            <p>The best Hotels in the market where they are located in...<a href="#">more</a></p>
         </div>
         <div class="kuelap">
             <img class="img" src="images/guide.png" alt="service">
