--- a/aboutme/personalsite/peru.html
+++ b/aboutme/personalsite/peru.html
@@ -95,12 +95,13 @@
         <div  class="passport">
             <img class="img" src="images/passport.png" alt="passport">
             <h2>Passport</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.! </p>
+            <p>We will help you in everything related to your Passports, information and guide. Many times our clients are not aware of the expiration of their passport and we recommend them as an additional service when the time is right to update or renew it.
+                Some destinations have some restrictions and for these cases we will give you the best information to keep you well informed of everything related to the subject...<a href="#">more</a></p>
         </div>
         <div  class="tickets">
             <img class="img" src="images/tickets.png" alt="tickets">
             <h2>Tickets</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eligendi dolor molestiae eveniet debitis excepturi dolorum possimus accusamus placeat suscipit. Iure natus nihil at molestiae eum? Eveniet maxime in quis veritatis delectus perferendis aperiam voluptas, quisquam id distinctio ullam iste quae quasi eius harum asperiores, sed alias exercitationem nemo quas.</p>  
+            <p>We have different ways to manage the purchase of your plane or bus tickets. We will guide you on the best dates and times so that you can travel without problems to the destinations you choose, as well as the best offers that we can get for you and that you have. hereby the best experience in your purchase...<a href="#">more</a></p>  
         </div>
         <div class="cusco">
             <img class="img" src="images/cusco.jpeg" alt="cusco">
