--- a/aboutme/personalsite/perucopy.html
+++ b/aboutme/personalsite/perucopy.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="carrusel.css">
 </head>
 <body>
+    <div class="call"> <a href="https://wa.me/51987801008/?text=your%20text" target="_blank">
+        <img src="images/icons8-whatsapp.gif" width="20" height="20" alt="wasap icon">
+    </a>   7866125793 | 51987801008</header1>
     <header>
         <a class="logo" href="#" >
             <img src="images/logo.png" alt="NyM Travel">
