--- a/aboutme/personalsite/peru.html
+++ b/aboutme/personalsite/peru.html
@@ -7,7 +7,7 @@
     <title>NyM Travel Agency</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/styles.css"> 
-    <link rel="stylesheet" href="carrusel.css">
+    <link rel="stylesheet" href="carruse.css">
 </head>
 <body>
     <header>
