--- a/traveling/site-plan.html
+++ b/traveling/site-plan.html
@@ -125,7 +125,7 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        We are a Travel and Tourism Agency with more than 30 years in the tourism field specialized in the sale of Air Tickets, National and International land, tourist programs of Peru, and all International destinations such as North America, the Middle East and Europe.
+        We are a Travel and Tourism Agency with more than 10 years in the tourism field specialized in the sale of Air Tickets, National and International land, tourist programs of Peru, and all International destinations such as North America, the Middle East and Europe.
         Provide the best tourist services in the market, exceeding the expectations of our clients and minimizing the impacts that affect the environment (saving energy and recycling). Personalized attention, good communication and speed in our services are three important pillars to fulfill this mission.
         
         People with extensive experience and excellent disposition for work. Teamwork is one of our mottos and our work engine.
@@ -192,7 +192,7 @@ That is why day by day we strive to do a good job and above all that a satisfied
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="images/page2.jpg" alt="page 3 wireframe">
+      <img src="images/home.jpg" alt="page 3 wireframe">
     </main>
   </body>
 
