--- a/aboutme/personalsite/peru.html
+++ b/aboutme/personalsite/peru.html
@@ -109,12 +109,12 @@
             <p>Cusco is one of the 7 new wonders of the world and will not be so for a long time and its infrastructure is totally impressive. Trust us to serve you and you will see that Machu Picchu will be an experience you will never forget.
             From the arrival at the Cusco Airport you will see that this area is full of beauty and with the best tranquility you will be able...<a href="#">more</a> <!-- to see the city, with a lot of colonial influence and how many more attractions both in the city and its surroundings.--></p>
         </div>
-        <!-- <div class="kuelap">
+        <div class="kuelap">
             <img class="img" src="images/kuelap.png" alt="kuelap">
             <h2>Kuelap</h2>
             <p>Kuélap, or Cuélap, is an important pre-Inca archaeological site located in the northeastern Andes of Peru, in the Province of Luya. It was built by the Chachapoyas culture.
 
-            It forms a large stone architectural complex characterized by its monumental condition, with a large artificial platform, oriented from south to north, set on the calcareous rock... <a href="#">more</a>  <!--ridge at the top of Cerro Barreta (at 3000 m.a.s.l.). The platform extends for almost 600 meters and is surrounded by a wall that is 19 meters high at some points. --></p> -->
+            It forms a large stone architectural complex characterized by its monumental condition, with a large artificial platform, oriented from south to north, set on the calcareous rock... <a href="#">more</a>  <!--ridge at the top of Cerro Barreta (at 3000 m.a.s.l.). The platform extends for almost 600 meters and is surrounded by a wall that is 19 meters high at some points. --></p>
         </div>
         <div class="local">
             <img class="img1" src="images/kuelap1.jpg" alt="kuelap">
