--- a/aboutme/personalsite/international.html
+++ b/aboutme/personalsite/international.html
@@ -82,8 +82,8 @@
     <p><a href="index.html"  <!--target="_blank" --> Home</a></p>
     <p><a href="peru.html" <!-- target="_blank" --> Get to Know Peru</a></p> 
     <p><a href="international.html" <!-- target="_blank" --> Internationals Destinations</a></p>
-    <p></p><a href="formulario.html"> Contact Us</a></p>
-    
+    <p><a href="../../traveling/site-plan.html"  <!--target="_blank" -->Site Plan</a></p>
+        
     <div class="social">
         <a href="https://facebook.com" target="_blank">
             <img src="images/facebook.png" alt="fb icon">
