--- a/aboutme/personalsite/peru.html
+++ b/aboutme/personalsite/peru.html
@@ -131,6 +131,7 @@
     <p><a href="index.html" target="_blank">Home</a></p>
     <p></p><a href="peru.html" class="nav-link">Get to Know Peru </a>
     <p><a href="international.html" target="_blank">Internationals Destinations</a></p>
+    <p><a href="../../traveling/site-plan.html"  <!--target="_blank" -->Site Plan</a></p>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
             <img src="images/facebook.png" alt="fb icon">
