--- a/aboutme/personalsite/international.html
+++ b/aboutme/personalsite/international.html
@@ -16,8 +16,8 @@
         <div class="position">
             <a href="index.html" class="nav-link">Home |</a>
             <a href="peru.html" class="nav-link">Get to Know Peru |</a>
-            <a href="international.html" class="nav-link">Internationals Destinations | </a>
-            <a href="contactus.html" target="_blank"> Contact Us</a> 
+            <a href="international.html" class="nav-link">Internationals Destinations  </a>
+             
         </div>
     </header>
     <div id="hero">
