--- a/aboutme/personalsite/peru.html
+++ b/aboutme/personalsite/peru.html
@@ -32,11 +32,11 @@
                 <a class='book' href="#">Book Now</a>
             </div>   
         </section>
-    </div>  -->
+    </div>-->
     <div class="slideshow-container">
         <div class="mySlides fade">
           <div class="numbertext">1 / 3</div>
-          <img src="images/LagunasdeLlanganuco.jpg" style="width:100%" alt="laguna">
+          <img src="images/LagunaLlanganuco.jpg" style="width:100%" alt="laguna">
           <div class="text">Laguna de Llanganuco</div>
         </div>
         
@@ -91,32 +91,34 @@
               dots[slideIndex-1].className += " active";
             }
         </script>
-    <main id="middle">
-        <div  class="passport">
+    <main id="card">
+        <div  class="passport1">
             <img class="img" src="images/passport.png" alt="passport">
             <h2>Passport</h2>
             <p>We will help you in everything related to your Passports, information and guide. Many times our clients are not aware of the expiration of their passport and we recommend them as an additional service when the time is right to update or renew it.
                 Some destinations have some restrictions and for these cases we will give you the best information to keep you well informed of everything related to the subject...<a href="#">more</a></p>
         </div>
-        <div  class="tickets">
+        <div  class="tickets1">
             <img class="img" src="images/tickets.png" alt="tickets">
             <h2>Tickets</h2>
             <p>We have different ways to manage the purchase of your plane or bus tickets. We will guide you on the best dates and times so that you can travel without problems to the destinations you choose, as well as the best offers that we can get for you and that you have. hereby the best experience in your purchase...<a href="#">more</a></p>  
         </div>
-        <div class="cusco">
+        <div class="cusco1">
             <img class="img" src="images/cusco.jpeg" alt="cusco">
             <h2>Cusco</h2>
             <p>Cusco is one of the 7 new wonders of the world and will not be so for a long time and its infrastructure is totally impressive. Trust us to serve you and you will see that Machu Picchu will be an experience you will never forget.
             From the arrival at the Cusco Airport you will see that this area is full of beauty and with the best tranquility you will be able...<a href="#">more</a> <!-- to see the city, with a lot of colonial influence and how many more attractions both in the city and its surroundings.--></p>
-        </div>  <!--
-        <div class="kuelap">
+        </div>
+        
+        <!--<div class="kuelap">
             <img class="img" src="images/kuelap.png" alt="kuelap">
             <h2>Kuelap</h2>
             <p>Kuélap, or Cuélap, is an important pre-Inca archaeological site located in the northeastern Andes of Peru, in the Province of Luya. It was built by the Chachapoyas culture.
 
-            It forms a large stone architectural complex characterized by its monumental condition, with a large artificial platform, oriented from south to north, set on the calcareous rock... <a href="#">more</a>  <!--ridge at the top of Cerro Barreta (at 3000 m.a.s.l.). The platform extends for almost 600 meters and is surrounded by a wall that is 19 meters high at some points. --></p> -->
+            It forms a large stone architectural complex characterized by its monumental condition, with a large artificial platform, oriented from south to north, set on the calcareous rock... <a href="#">more</a>  <!--ridge at the top of Cerro Barreta (at 3000 m.a.s.l.). The platform extends for almost 600 meters and is surrounded by a wall that is 19 meters high at some points. --></p> 
         </div>
-        <div class="local">
+    </main>
+    <main id="local">
             <img class="img1" src="images/kuelap1.jpg" alt="kuelap">
         </div>
         <div class="text1">
