--- a/aboutme/personalsite/perucopy.html
+++ b/aboutme/personalsite/perucopy.html
@@ -129,6 +129,9 @@
         <a href="https://instagram.com" target="_blank">
             <img src="images/instagram.png" alt="instagram icon">
         </a>
+        <a href="https://wa.me/17864138379/?text=your%20text" target="_blank">
+            <img src="images/logo-wasap.png" width="60" height="60">
+        </a>
         
     </div>
 </footer>
