--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -28,7 +28,7 @@
             <h1 class="home-title">Beautiful Places</h1>
             <h4>I will never forget this place</h4>
             <div class='button-box'>
-                <a class='book' href="#">Book Now</a>
+                <a class='book' href="contactus.html">Book Now</a>
             </div>   
         </section>
     </div>
