--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -16,7 +16,7 @@
         <div class="position">
             <a href="index.html" class="nav-link">Home |</a>
             <a href="peru.html" class="nav-link">Get to Know Peru |</a>
-            <a href="international.html" class="nav-link">Internationals Destinations |</a>
+            <a href="international.html" class="nav-link">Internationals Destinations </a>
               
         </div>
     </header>
