--- a/aboutme/personalsite/international.html
+++ b/aboutme/personalsite/international.html
@@ -25,7 +25,7 @@
         <div class="mySlides fade">
           <div class="numbertext">1 / 3</div>
           <img src="images/egypto.jpg" style="width:100%" alt="laguna">
-          <div class="text">Egipto</div>
+          <div class="text">Faraon Templo Egipcio</div>
         </div>
         
         <div class="mySlides fade">
@@ -37,7 +37,7 @@
         <div class="mySlides fade">
           <div class="numbertext">3 / 3</div>
           <img src="images/sydney.jpg" style="width:100%" alt="gocta">
-          <div class="text">Sidney</div>
+          <div class="text">Opera de Sidney</div>
         </div>
         
         <a class="prev" onclick="plusSlides(-1)">❮</a>
