--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -86,10 +86,10 @@
     </main>    
 <footer>
     <p>NyM Travel &copy; 2022 - Martin Pasco</p>
-    <p><a href="index.html"  <!--target="_blank" -->Home</a></p>
-    <p><a href="peru.html" <!-- target="_blank" -->Get to Know Peru</a></p> 
-    <p><a href="international.html" <!-- target="_blank" -->Internationals Destinations</a></p>
-    <p><a href="../../traveling/site-plan.html"  <!--target="_blank" -->Site Plan</a></p> 
+    <p><a href="index.html" >Home</a></p>
+    <p><a href="peru.html" >Get to Know Peru</a></p> 
+    <p><a href="international.html" >Internationals Destinations</a></p>
+    <p><a href="../../traveling/site-plan.html" >Site Plan</a></p> 
     <div class="social">
         <a href="https://facebook.com" target="_blank">
             <img src="images/facebook.png" alt="fb icon">
