--- a/aboutme/personalsite/peru.html
+++ b/aboutme/personalsite/peru.html
@@ -104,19 +104,20 @@
             <h2>Kuelap</h2>
             <p>Kuélap, or Cuélap, is an important pre-Inca archaeological site located in the northeastern Andes of Peru, in the Province of Luya. It was built by the Chachapoyas culture.
 
-            It forms a large stone architectural complex characterized by its monumental condition, with a large artificial platform, oriented from south to north, set on the calcareous rock... <a href="#">more</a>  <!--ridge at the top of Cerro Barreta (at 3000 m.a.s.l.). The platform extends for almost 600 meters and is surrounded by a wall that is 19 meters high at some points. --></p> 
-        </div>
+            It forms a large stone architectural complex characterized by its monumental condition, with a large artificial platform, oriented from south to north, set on the calcareous rock... <a href="#">more</a>  ridge at the top of Cerro Barreta (at 3000 m.a.s.l.). The platform extends for almost 600 meters and is surrounded by a wall that is 19 meters high at some points. </p> 
+        </div> -->
     </main>
-    <main id="local">
+    <div id="local">
+        <div>
             <img class="img1" src="images/kuelap1.jpg" alt="kuelap">
         </div>
         <div class="text1">
-            <h2>Kuelap<h2>  
-            <p>Amazonas was the cradle of one of Peru’s major pre-Hispanic cultures: the Chachapoyas. It was here that ancient people built Kuelap, an imposing stone structure protected by an outer wall up to 20 meters high, situated at the top of a mountain amid a rugged landscape. Until recently, the only way to reach this archaeological site was on foot. </p>
+            <h2>Kuelap  
+            <p>Amazonas was the cradle of one of Peru’s major pre-Hispanic cultures: the Chachapoyas. It was here that ancient people built Kuelap, an imposing stone structure protected by an outer wall up to 20 meters high, situated at the top of a mountain amid a rugged landscape. Until recently, the only way to reach this archaeological site was on foot. </p></h2>
         </div>
         
 
-    </main>    
+    </div>    
 <footer>
     <p>NyM Travel &copy; 2022 - Martin Pasco</p>
     <p><a href="index.html" >Home</a></p>
@@ -134,7 +135,7 @@
             <img src="images/instagram.png" alt="instagram icon">
         </a>
         <a href="https://wa.me/17864138379/?text=your%20text" target="_blank">
-            <img src="images/logo-wasap.png" width="60" height="60">
+            <img src="images/logo-wasap.png" alt="WhatApp" width="60" height="60">
         </a>
     </div>
 </footer>
