--- a/aboutme/personalsite/international.html
+++ b/aboutme/personalsite/international.html
@@ -143,7 +143,7 @@
             <img src="images/instagram.png" alt="instagram icon">
         </a>
         <a href="https://wa.me/51987801008/?text=your%20text" target="_blank">
-            <img src="images/logo-wasap.png" width="60" height="60">
+            <img src="images/logo-wasap.png" alt="WhatApp" width="60" height="60">
         </a>
         </div>
     </footer>
