--- a/aboutme/personalsite/peru.html
+++ b/aboutme/personalsite/peru.html
@@ -109,7 +109,7 @@
         </div>
         <div class="text1">
             <h2>Kuelap </h2>
-            <h3>It was the cradle of one of Peru’s major pre-Hispanic cultures: the Chachapoyas. It was here that ancient people built Kuelap, an imposing stone structure protected by an outer wall up to 20 meters high, situated at the top of a mountain amid a rugged landscape. Until recently, the only way to reach this archaeological site was on foot. </h3>
+            <p>It was the cradle of one of Peru’s major pre-Hispanic cultures: the Chachapoyas. It was here that ancient people built Kuelap, an imposing stone structure protected by an outer wall up to 20 meters high, situated at the top of a mountain amid a rugged landscape. Until recently, the only way to reach this archaeological site was on foot. </p>
         </div>
     </div>    
 <footer>
