--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NyM Travel Agency</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" href="carrusel.css">
 </head>
 <body>
     <header>
@@ -103,7 +102,7 @@
             <img src="images/instagram.png" alt="instagram icon">
         </a>
         <a href="https://wa.me/51987801008/?text=your%20text" target="_blank">
-            <img src="images/logo-wasap.png"  alt="WhatApp" width="60" height="60">
+            <img src="images/logo-wasap.png"  alt="fb icon" width="60" height="60">
         </a>
     </div>    
 </footer>
