--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -59,6 +59,8 @@
 
             It forms a large stone architectural complex characterized by its monumental condition, with a large artificial platform, oriented from south to north, set on the calcareous rock... <a href="#">more</a>  <!--ridge at the top of Cerro Barreta (at 3000 m.a.s.l.). The platform extends for almost 600 meters and is surrounded by a wall that is 19 meters high at some points. --></p>
         </div>
+    </main>
+    <div id="local1">
         <div class="Internationals1">
             <img class="img" src="images/Egypt.png" alt="Egypt">
             <h2>Egypt</h2>
@@ -83,28 +85,28 @@
             <p>It is not a very exploited destination but it has many options to visit.
                 Australia also offers us a great variety of contrasts and a spectacular beauty that is not available in other parts of our planet. For example, along the coast we can explore vibrant cities rich in multi-culture, go on a safari to the vast sand islands, trek through its ancient rainforests or scuba dive...<a href="#">more</a> <!--the Great Barrier Reef. In the interior (or Outback as they call it in Australia) we can explore its national parks and red sand deserts if we want it to be an adventure trip.--></p>
         </div>
+    </div>
+        
+    <footer>
+        <p>NyM Travel &copy; 2022 - Martin Pasco</p>
+        <p><a href="index.html" >Home</a></p>
+        <p></p><a href="peru.html" class="nav-link">Get to Know Peru </a>
+        <p><a href="international.html" >Internationals Destinations</a></p>
+        <p><a href="../../traveling/site-plan.html"  >Site Plan</a></p>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com" target="_blank">
+                <img src="images/instagram.png" alt="instagram icon">
+            </a>
+            <a href="https://wa.me/17864138379/?text=your%20text" target="_blank">
+                <img src="images/logo-wasap.png" alt="WhatApp" width="60" height="60">
+            </a>
+        </div>
+    </footer>
 
-    </main>    
-<footer>
-    <p>NyM Travel &copy; 2022 - Martin Pasco</p>
-    <p><a href="index.html" >Home</a></p>
-    <p><a href="peru.html" >Get to Know Peru</a></p> 
-    <p><a href="international.html" >Internationals Destinations</a></p>
-    <p><a href="../../traveling/site-plan.html" >Site Plan</a></p> 
-    <div class="social">
-        <a href="https://facebook.com" target="_blank">
-            <img src="images/facebook.png" alt="fb icon">
-        </a>
-        <a href="https://twitter.com" target="_blank">
-            <img src="images/twitter.png" alt="twitter icon">
-        </a>
-        <a href="https://instagram.com" target="_blank">
-            <img src="images/instagram.png" alt="instagram icon">
-        </a>
-        <a href="https://wa.me/51987801008/?text=your%20text" target="_blank">
-            <img src="images/logo-wasap.png"  alt="fb icon" width="60" height="60">
-        </a>
-    </div>    
-</footer>
-</body>
 </html>
