--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>About Me</h1>
-    <img src="martin.png" alt="Mat">
+    <img src="https://github.com/martinpasco/web-wdd130/tree/master/aboutme/images" alt="Mat">
     <h2>Martin Pasco</h2>
     <h2>Mat</h2>
     <p>Hello, I'm Martin Pasco, my colleagues call me Mat because there are 2 others with the same name, it seems like a common name, etc.</p>
